data/derived/fa15/progs/unify/prog3028.ml.out
Characters 76-78:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a list -> 'b -> 'a list
       but an expression was expected of type 'b list
